# pre-commit-python-import-style

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/python_import_style/: __init__.py  __main__.py  _append_rule_error.py  _check_all_rules.py  _exclude_ignore_paths.py  _get_tree_from_file.py  _is_inside_directory.py  _is_python_file.py  _iter_project_python_files.py  _prepare_file_context.py  _rule_0.py  _rule_1.py  _rule_2.py  _rule_3.py
tests/: test_append_rule_error.py  test_exclude_ignore_paths.py  test_get_tree_from_file.py  test_hook.py  test_is_inside_directory.py  test_is_python_file.py  test_iter_project_python_files.py  test_prepare_file_context.py  test_rule_0.py  test_rule_1.py  test_rule_2.py  test_rule_3.py  test_utils.py
