[project]
name = "python_import_style"
version = "0.0.dev1"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
description = "Python import style enforcement"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
repository = "https://github.com/dmf-unicatt/pre-commit-python-import-style"
issues = "https://github.com/dmf-unicatt/pre-commit-python-import-style/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[project.scripts]
python-import-style = "python_import_style:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.5",
    "prek>=0.3.10",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "yamllint>=1.38.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_import_style"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "ANN", "ARG", "B", "C4", "D", "E", "F", "FLY", "I", "ICN", "N", "NPY",
    "PTH", "Q", "RUF", "TC", "UP", "W"
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/python_import_style/__init__.py" = ["F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"
